--- a/Suma2Lealtad/Views/Afiliado/FilterReview.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/FilterReview.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Afiliado / Filtro de Búsqueda de Afiliado</h3>
+                    <h3 class="panel-title">Revisar Afiliaciones / Filtro de Búsqueda</h3>
                 </div>
 
                 <div class="panel-body">
