--- a/Suma2Lealtad/Views/Channel/Index.cshtml
+++ b/Suma2Lealtad/Views/Channel/Index.cshtml
@@ -19,43 +19,39 @@
 
                 <div class="panel-body">
 
-                    <table class="table table-striped custab">
+                <table class="table table-striped custab">
 
-                        <thead>
+                    <thead>
 
-                            <tr>
-                                <th>
-                                    @*@Html.DisplayNameFor(model => model.name)*@ Nombre
+                    <tr>
+                        <th>Nombre</th>
+                        <th class="text-center"></th>
+                    </tr>
 
-                                </th>
-                                <th class="text-center"></th>
-                            </tr>
+                    </thead>
 
-                        </thead>
+                    <tbody>
 
-                        <tbody>
+                    @foreach (var item in Model)
+                    {
+                    <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.name)
+                    </td>
+                    <td class="text-right">
+                        <a href="@Url.Action("Edit", "Channel", new { id = item.id })" class="btn btn-info btn-xs">
+                            <span class="glyphicon glyphicon-edit"></span>
+                        </a>
+                        <a href="@Url.Action("Delete", "Channel", new { id = item.id })" class="btn btn-danger btn-xs">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </a>
+                    </td>
+                    </tr>
+                    }
 
+                    </tbody>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="@Url.Action("Edit", "Channel", new { id = item.id })" class="btn btn-info btn-xs">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </a>
-                                        <a href="@Url.Action("Delete", "Channel", new { id = item.id })" class="btn btn-danger btn-xs">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-
-                        </tbody>
-
-                    </table>
+                </table>
 
                     <!-- buttons -->
                     <div class="col-md-12 col-tabla-btn">
@@ -78,4 +74,3 @@
     <!-- row -->
 
 </div>
-@*<!-- container -->*@
