--- a/Suma2Lealtad/Views/Company/Edit.cshtml
+++ b/Suma2Lealtad/Views/Company/Edit.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Compañia / Editar Registro</h3>
+                    <h3 class="panel-title">Compañía / Editar Registro</h3>
                 </div>
 
                 <div class="panel-body">
@@ -31,7 +31,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre:
+                                    Nombre:
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
@@ -39,7 +39,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Alias:
+                                    Alias:
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.ALIAS, new { @class = "form-control" })
@@ -47,7 +47,7 @@
                                 </div>
 
                                 <div class="editor-label  col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.active)*@ Rif :
+                                    RIF :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.rif, new { @class = "form-control" })
@@ -55,7 +55,7 @@
                                 </div>
 
                                 <div class="editor-label  col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.active)*@ Dirección :
+                                    Dirección :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.address, new { @class = "form-control" })
@@ -63,7 +63,7 @@
                                 </div>
 
                                 <div class="editor-label  col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.active)*@ Teléfono :
+                                    Teléfono :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.phone, new { @class = "form-control" })
@@ -71,7 +71,7 @@
                                 </div>
 
                                 <div class="editor-label  col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.active)*@ Correo :
+                                    Correo Electrónico :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.email, new { @class = "form-control" })
