--- a/Suma2Lealtad/Views/Reasons/Index.cshtml
+++ b/Suma2Lealtad/Views/Reasons/Index.cshtml
@@ -24,7 +24,7 @@
             <thead>
                 <tr>
                     <th>
-                        @*@Html.DisplayNameFor(model => model.Nombre)*@ Nombre
+                        Nombre
                     </th>
                     <th class="text-center"></th>
                 </tr>
