--- a/Suma2Lealtad/Views/Type/Create.cshtml
+++ b/Suma2Lealtad/Views/Type/Create.cshtml
@@ -26,28 +26,28 @@
 
                         <form class="form-horizontal" role="form">
 
-                            <div class="form-group">
+                        <div class="form-group">
 
-                                <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
-                                </div>
-                                <div class="editor-field col-md-8">
-                                    @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.name)
-                                </div>
-
+                            <div class="editor-label col-md-4 control-label">
+                                Nombre :
+                            </div>
+                            <div class="editor-field col-md-8">
+                                @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.name)
                             </div>
 
-                            <!-- btn btn-success -->
-                            <div class="form-group">
-                                <div class="col-md-12 col-btn">
-                                    <div class="pull-right">
-                                        <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a href="@Url.Action("Index", "Type")" class="btn btn-danger btn-md" role="button">Cancelar</a>
-                                    </div>
+                        </div>
+
+                        <!-- btn btn-success -->
+                        <div class="form-group">
+                            <div class="col-md-12 col-btn">
+                                <div class="pull-right">
+                                    <input type="submit" class="btn btn-success btn-md" value="Guardar" />
+                                    <a href="@Url.Action("Index", "Type")" class="btn btn-danger btn-md" role="button">Cancelar</a>
                                 </div>
                             </div>
-                            <!--// btn btn-success -->
+                        </div>
+                        <!--// btn btn-success -->
 
                         </form>
                 
