--- a/Suma2Lealtad/Views/Type/Index.cshtml
+++ b/Suma2Lealtad/Views/Type/Index.cshtml
@@ -25,7 +25,7 @@
 
                             <tr>
                                 <th>
-                                    @*@Html.DisplayNameFor(model => model.Nombre)*@ Nombre
+                                   Nombre
                                 </th>
                                 <th class="text-center"></th>
                             </tr>
