--- a/Suma2Lealtad/Views/Afiliado/Index.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Index.cshtml
@@ -26,71 +26,63 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Afiliado / Revisar Afiliaciones / Lista de Registros</h3>
+            <h3 class="panel-title">Afiliado / Lista de Afiliaciones</h3>
         </div>
 
         <div class="panel-body">
 
-            @*<table class="table table-striped custab">*@
             <table id="afiliados" class="table table-hover">
 
                 <thead>
 
-                    <tr>
-                        <th>Número Documento/Cédula
-                        </th>
-                        <th>Nombre 
-                        </th>
-                        <th>Correo
-                        </th>
-                        <th>Estatus Afiliación
-                        </th>
-                        <th>Tarjeta
-                        </th>
-                        <th>Estatus Tarjeta
-                        </th>
-
-                        <th class="text-center"></th>
-                    </tr>
+                <tr>
+                    <th>Número de Documento</th>
+                    <th>Nombre del Afiliado</th>
+                    <th>Correo Electrónico</th>
+                    <th>Estatus de Afiliación</th>
+                    <th>Número de Tarjeta</th>
+                    <th>Estatus de Tarjeta</th>
+                    <th class="text-center"></th>
+                </tr>
 
                 </thead>
 
                 <tbody>
 
-                    @foreach (var item in Model)
-                    {
-                        <tr data-row-key="@item.id" data-statusafiliacion="@item.estatus" data-statustarjeta="@item.estatustarjeta">
-                            <td>
-                                @Html.DisplayFor(modelItem => item.docnumber)
-                            </td>
+                @foreach (var item in Model)
+                {
+                    <tr data-row-key="@item.id" data-statusafiliacion="@item.estatus" data-statustarjeta="@item.estatustarjeta">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.docnumber)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.name)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.name)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.email)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.email)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.estatus)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.estatus)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.pan)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.pan)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.estatustarjeta)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.estatustarjeta)
+                        </td>
 
-                            <td class="text-right">
-                                <a id="@item.id" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs disabled">
-                                    <span class="glyphicon glyphicon-edit"></span>
-                                </a>
-                            </td>
-                        </tr>
-                    }
+                        <td class="text-right">
+                            <a id="@item.id" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs disabled">
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                        </td>
+                    </tr>
+                }
 
                 </tbody>
 
