--- a/Suma2Lealtad/Views/Channel/Create.cshtml
+++ b/Suma2Lealtad/Views/Channel/Create.cshtml
@@ -29,7 +29,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                                    Nombre :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
