--- a/Suma2Lealtad/Views/Company/Create.cshtml
+++ b/Suma2Lealtad/Views/Company/Create.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Compañia / Agregar Nuevo Registro</h3>
+                    <h3 class="panel-title">Compañía / Agregar Nuevo Registro</h3>
                 </div>
 
                 <div class="panel-body">
@@ -29,7 +29,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                                    Nombre :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
@@ -37,7 +37,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Alias :
+                                    Alias :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.ALIAS, new { @class = "form-control" })
@@ -53,7 +53,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Dirección :
+                                   Dirección :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.address, new { @class = "form-control" })
@@ -61,7 +61,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Teléfono :
+                                    Teléfono :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.phone, new { @class = "form-control" })
@@ -69,7 +69,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Email :
+                                    Email :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.email, new { @class = "form-control" })
