--- a/Suma2Lealtad/Views/Interest/Create.cshtml
+++ b/Suma2Lealtad/Views/Interest/Create.cshtml
@@ -13,59 +13,59 @@
 
             <div class="panel panel-default">
 
-                <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Interés del Cliente / Agregar Nuevo Registro</h3>
-                </div>
+            <div class="panel-heading clearfix panel-gradient">
+                <h3 class="panel-title">Interés del Cliente / Agregar Nuevo Registro</h3>
+            </div>
 
-                <div class="panel-body">
+            <div class="panel-body">
 
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true)
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true)
 
-                        <form class="form-horizontal" role="form">
+                    <form class="form-horizontal" role="form">
 
-                            <div class="form-group">
+                    <div class="form-group">
 
-                                <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
-                                </div>
-                                <div class="editor-field col-md-8">
-                                    @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.name)
-                                </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Nombre :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.name)
+                        </div>
 
-                                <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.active)*@ Activo :
-                                </div>
-                                <div class="editor-field col-md-8">
-                                    @Html.EditorFor(model => model.active)
-                                    @Html.ValidationMessageFor(model => model.active)
-                                </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Activo :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.EditorFor(model => model.active)
+                            @Html.ValidationMessageFor(model => model.active)
+                        </div>
 
+                    </div>
+
+                    <!-- btn btn-success -->
+                    <div class="form-group">
+                        <div class="col-md-12 col-btn">
+                            <div class="pull-right">
+                                <input type="submit" class="btn btn-success btn-md" value="Guardar" />
+                                <a href="@Url.Action("Index", "Interest")" class="btn btn-danger btn-md" role="button">Cancelar</a>
                             </div>
+                        </div>
+                    </div>
+                    <!--// btn btn-success -->
 
-                            <!-- btn btn-success -->
-                            <div class="form-group">
-                                <div class="col-md-12 col-btn">
-                                    <div class="pull-right">
-                                        <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a href="@Url.Action("Index", "Interest")" class="btn btn-danger btn-md" role="button">Cancelar</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--// btn btn-success -->
-
-                        </form>
+                    </form>
                 
-                    }
-
-                </div>
-                <!--// panel-body -->
+                }
 
             </div>
-            <!--// panel -->
+            <!--// panel-body -->
+
+        </div>
+        <!--// panel -->
 
         </div>
         <!--// columns -->
