--- a/Suma2Lealtad/Views/Interest/Index.cshtml
+++ b/Suma2Lealtad/Views/Interest/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Interés del Cliente / Lista de Registros </h3>
+                    <h3 class="panel-title">Interés del Afiliado / Lista de Registros </h3>
                 </div>
 
                 <div class="panel-body">
@@ -23,36 +23,31 @@
 
                         <thead>
 
-                            <tr>
-                                <th>
-                                    @*@Html.DisplayNameFor(model => model.)*@ Nombre
-
-                                </th>
-                                <th class="text-center"></th>
-                            </tr>
+                        <tr>
+                            <th>Nombre</th>
+                            <th class="text-center"></th>
+                        </tr>
 
                         </thead>
 
                         <tbody>
 
-
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="@Url.Action("Edit", "Interest", new { id = item.id })" class="btn btn-info btn-xs">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </a>
-                                        <a href="@Url.Action("Delete", "Interest", new { id = item.id })" class="btn btn-danger btn-xs">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-
+                        @foreach (var item in Model)
+                        {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.name)
+                            </td>
+                            <td class="text-right">
+                                <a href="@Url.Action("Edit", "Interest", new { id = item.id })" class="btn btn-info btn-xs">
+                                    <span class="glyphicon glyphicon-edit"></span>
+                                </a>
+                                <a href="@Url.Action("Delete", "Interest", new { id = item.id })" class="btn btn-danger btn-xs">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </a>
+                            </td>
+                        </tr>
+                        }
                         </tbody>
 
                     </table>
