--- a/Suma2Lealtad/Views/Menu/Create.cshtml
+++ b/Suma2Lealtad/Views/Menu/Create.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Menu / Agregar Nuevo Registro</h3>
+                    <h3 class="panel-title">Menú / Agregar Nuevo Registro</h3>
                 </div>
 
                 <div class="panel-body">
@@ -29,7 +29,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                                    Nombre :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
@@ -37,7 +37,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Menu :
+                                    Menu (Superior) :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.parentid, new { @class = "form-control" })
@@ -45,7 +45,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Controlador :
+                                    Controlador :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.controller, new { @class = "form-control" })
@@ -53,7 +53,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Acción :
+                                    Acción :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.actions, new { @class = "form-control" })
@@ -61,7 +61,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Order :
+                                    Orden :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.order, new { @class = "form-control" })
