--- a/Suma2Lealtad/Views/Menu/Edit.cshtml
+++ b/Suma2Lealtad/Views/Menu/Edit.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Menu / Editar Registro</h3>
+                    <h3 class="panel-title">Menú / Editar Registro</h3>
                 </div>
 
                 <div class="panel-body">
@@ -31,7 +31,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                                    Nombre :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
@@ -39,7 +39,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Menu :
+                                    Menu (Superior):
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.parentid, new { @class = "form-control" })
@@ -47,7 +47,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Controlador :
+                                    Controlador :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.controller, new { @class = "form-control" })
@@ -55,7 +55,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Acción :
+                                    Acción :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.actions, new { @class = "form-control" })
@@ -63,7 +63,7 @@
                                 </div>
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Order :
+                                    Orden :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.order, new { @class = "form-control" })
