--- a/Suma2Lealtad/Views/Reasons/Edit.cshtml
+++ b/Suma2Lealtad/Views/Reasons/Edit.cshtml
@@ -31,7 +31,7 @@
                 @Html.HiddenFor(model => model.id)
 
                 <div class="editor-label col-md-4 control-label">
-                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                    Nombre :
                 </div>
                 <div class="editor-field col-md-8">
                     @Html.TextBoxFor(model => model.name, new {@class="form-control" })
