--- a/Suma2Lealtad/Views/Role/Index.cshtml
+++ b/Suma2Lealtad/Views/Role/Index.cshtml
@@ -22,37 +22,33 @@
                     <table class="table table-striped custab">
 
                         <thead>
-
-                            <tr>
-                                <th>
-                                    Nombre
-                                </th>
-                                <th class="text-center"></th>
-                            </tr>
-
+                        <tr>
+                            <th>Nombre</th>
+                            <th class="text-center"></th>
+                        </tr>
                         </thead>
 
                         <tbody>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="@Url.Action("Menus", "Role", new { id = item.id })" class="btn btn-primary btn-xs">
-                                            <span class="glyphicon glyphicon-pushpin"></span>
-                                        </a>
-                                        <a href="@Url.Action("Edit", "Role", new { id = item.id })" class="btn btn-info btn-xs">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </a>
-                                        <a href="@Url.Action("Delete", "Role", new { id = item.id })" class="btn btn-danger btn-xs">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
+                        @foreach (var item in Model)
+                        {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.name)
+                            </td>
+                            <td class="text-right">
+                                <a href="@Url.Action("Menus", "Role", new { id = item.id })" class="btn btn-primary btn-xs">
+                                    <span class="glyphicon glyphicon-pushpin"></span>
+                                </a>
+                                <a href="@Url.Action("Edit", "Role", new { id = item.id })" class="btn btn-info btn-xs">
+                                    <span class="glyphicon glyphicon-edit"></span>
+                                </a>
+                                <a href="@Url.Action("Delete", "Role", new { id = item.id })" class="btn btn-danger btn-xs">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </a>
+                            </td>
+                        </tr>
+                        }
 
                         </tbody>
 
