--- a/Suma2Lealtad/Views/SecurityLevel/Create.cshtml
+++ b/Suma2Lealtad/Views/SecurityLevel/Create.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Nivel de Permiso / Agregar Nuevo Registro</h3>
+                    <h3 class="panel-title">Nivel de Seguridad / Agregar Nuevo Registro</h3>
                 </div>
 
                 <div class="panel-body">
@@ -29,7 +29,7 @@
                             <div class="form-group">
 
                                 <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
+                                    Nombre :
                                 </div>
                                 <div class="editor-field col-md-8">
                                     @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
