--- a/Suma2Lealtad/Views/SecurityLevel/Edit.cshtml
+++ b/Suma2Lealtad/Views/SecurityLevel/Edit.cshtml
@@ -14,46 +14,45 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Nivel de Permisos / Editar</h3>
+                    <h3 class="panel-title">Nivel de Seguridad / Editar</h3>
                 </div>
 
                 <div class="panel-body">
 
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true)
+                @using (Html.BeginForm())
+                {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
 
-                        @Html.HiddenFor(model => model.id)
+                @Html.HiddenFor(model => model.id)
 
-                        <form class="form-horizontal" role="form">
+                <form class="form-horizontal" role="form">
 
-                            <div class="form-group">
+                    <div class="form-group">
 
-                                <div class="editor-label col-md-4 control-label">
-                                    @*@Html.LabelFor(model => model.name)*@ Nombre :
-                                </div>
-                                <div class="editor-field col-md-8">
-                                    @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.name)
-                                </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Nombre :
+                        </div>
+                        <div class="editor-field col-md-8">
+                            @Html.TextBoxFor(model => model.name, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.name)
+                        </div>
 
+                    </div>
+
+                    <!-- buttons -->
+                    <div class="form-group">
+                        <div class="col-md-12 col-btn">
+                            <div class="pull-right">
+                                <input type="submit" class="btn btn-success btn-md" value="Guardar" />
+                                <a class="btn btn-danger btn-md" href="@Url.Action("Index", "SecurityLevel")">Cancelar</a>
                             </div>
+                        </div>
+                    </div>
+                    <!--// buttons -->
 
-                            <!-- buttons -->
-                            <div class="form-group">
-                                <div class="col-md-12 col-btn">
-                                    <div class="pull-right">
-                                        <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a class="btn btn-danger btn-md" href="@Url.Action("Index", "SecurityLevel")">Cancelar</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--// buttons -->
-
-                        </form>
-                
-                    }
+                </form>
+                }
 
                 </div>
                 <!--// panel-body -->
