--- a/Suma2Lealtad/Views/SecurityLevel/Index.cshtml
+++ b/Suma2Lealtad/Views/SecurityLevel/Index.cshtml
@@ -14,53 +14,50 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Nivel de Permisos / Lista de Registros </h3>
+                    <h3 class="panel-title">Nivel de Seguridad / Lista de Registros</h3>
                 </div>
 
                 <div class="panel-body">
 
-                    <table class="table table-striped custab">
+                <table class="table table-striped custab">
 
-                        <thead>
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th class="text-center"></th>
+                        </tr>
+                    </thead>
 
-                            <tr>
-                                <th>Nombre
-                                </th>
-                                <th class="text-center"></th>
-                            </tr>
+                    <tbody>
 
-                        </thead>
+                    @foreach (var item in Model)
+                    {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.name)
+                        </td>
+                        <td class="text-right">
+                            <a href="@Url.Action("Edit", "SecurityLevel", new { id = item.id })" class="btn btn-info btn-xs">
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                            <a href="@Url.Action("Delete", "SecurityLevel", new { id = item.id })" class="btn btn-danger btn-xs">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </a>
+                        </td>
+                    </tr>
+                    }
 
-                        <tbody>
+                    </tbody>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="@Url.Action("Edit", "SecurityLevel", new { id = item.id })" class="btn btn-info btn-xs">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </a>
-                                        <a href="@Url.Action("Delete", "SecurityLevel", new { id = item.id })" class="btn btn-danger btn-xs">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
+                </table>
 
-                        </tbody>
-
-                    </table>
-
-                    <!-- buttons -->
-                    <div class="col-md-12 col-tabla-btn">
-                        <div class="pull-right">
-                            <a href="@Url.Action("Create", "SecurityLevel")" class="btn btn-success btn-md">Agregar Nuevo Registro</a>
-                        </div>
+                <!-- buttons -->
+                <div class="col-md-12 col-tabla-btn">
+                    <div class="pull-right">
+                        <a href="@Url.Action("Create", "SecurityLevel")" class="btn btn-success btn-md">Agregar Nuevo Registro</a>
                     </div>
-                    <!--// buttons -->
+                </div>
+                <!--// buttons -->
 
                 </div>
                 <!-- panel-body -->
