--- a/Suma2Lealtad/Views/User/Index.cshtml
+++ b/Suma2Lealtad/Views/User/Index.cshtml
@@ -13,68 +13,51 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Usuarios / Listado de Registros </h3>
+                    <h3 class="panel-title">Usuario / Listado de Registros </h3>
                 </div>
 
                 <div class="panel-body">
 
                     <table class="table table-striped custab">
-
                         <thead>
-                            <tr>
-                                <th>Login
-                                </th>
-                                <th>Nombre
-                                </th>
-                                <th>Apellido
-                                </th>
-                                <th>Email
-                                </th>
-                                <th>Estatus
-                                </th>
-                                <th class="text-center"></th>
-                            </tr>
+                        <tr>
+                        <th>Login</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Correo Electrónico</th>
+                        <th>Estatus</th>
+                        <th class="text-center"></th>
+                        </tr>
                         </thead>
 
                         <tbody>
 
-                            @foreach (var item in Model)
-                            {
+                        @foreach (var item in Model)
+                        {
                             
-                                <tr>
+                        <tr>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.login)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.firstname)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.lastname)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.email)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.status)
-                                    </td>
+                        <td>@Html.DisplayFor(modelItem => item.login)</td>
+                        <td>@Html.DisplayFor(modelItem => item.firstname)</td>
+                        <td>@Html.DisplayFor(modelItem => item.lastname)</td>
+                        <td>@Html.DisplayFor(modelItem => item.email)</td>
+                        <td>@Html.DisplayFor(modelItem => item.status)</td>
 
+                        <td class="text-right">
+                            <a href="@Url.Action("Roles", "User", new { id = item.id })" class="btn btn-primary btn-xs">
+                                <span class="glyphicon glyphicon-pushpin"></span>
+                            </a>
+                            <a href="@Url.Action("Edit", "User", new { id = item.id })" class="btn btn-info btn-xs">
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                            <a href="@Url.Action("Delete", "User", new { id = item.id })" class="btn btn-danger btn-xs">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </a>
+                        </td>
 
-                                    <td class="text-right">
-                                        <a href="@Url.Action("Roles", "User", new { id = item.id })" class="btn btn-primary btn-xs">
-                                            <span class="glyphicon glyphicon-pushpin"></span>
-                                        </a>
-                                        <a href="@Url.Action("Edit", "User", new { id = item.id })" class="btn btn-info btn-xs">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </a>
-                                        <a href="@Url.Action("Delete", "User", new { id = item.id })" class="btn btn-danger btn-xs">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                        </a>
-                                    </td>
-
-                                </tr>
+                        </tr>
                             
-                            }
+                        }
 
                         </tbody>
 
